# AlgorithmicTrading

./: .gitignore  README.md  pyproject.toml
apis/communication/: email.py  telegram.py
apis/data/: s3.py  trading_data.py
apis/trading/: ibkr.py  ibkrhelp.py
backtester/: backtesterhelp.py  marketdatahelp.py  request_strategy.py  tradedatahelp.py
market_data/: marketdatahelp.py
signals/technical_indicators/mean_reversion/: bollinger_bands.py
signals/technical_indicators/mean_reversion/tests/: static_data.py  test_bollinger_bands.py
signals/technical_indicators/momentum/: macd.py  rsi.py
signals/technical_indicators/momentum/tests/: static_data.py  test_macd.py  test_rsi.py
signals/technical_indicators/relative_strength/: stochastic_oscillator.py
signals/technical_indicators/relative_strength/tests/: static_data.py  test_stochastic_oscillator.py
signals/technical_indicators/trend/: moving_average.py
signals/technical_indicators/trend/tests/: static_data.py  test_moving_average.py
signals/technical_indicators/volume/: on_balance_volume.py
signals/technical_indicators/volume/tests/: static_data.py  test_on_balance_volume.py
static_data/: enums.py  test_static_data.py
trading/: signalhelp.py  tradehelp.py
utils/: assertions.py
