[tool.poetry]
name = "algorithmictrading"
version = "0.1.0"
description = ""
authors = ["Joshua Ashmore <joshua.a.ashmore@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.6,<3.12"
ibapi = "^9.81.1.post1"
boto3 = "^1.26.155"
pandas = "^2.0.2"
requests = "^2.31.0"
yfinance = "^0.2.20"
pydantic = "^1.10.9"
pytest = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
